Updated CSS to display correctly on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,500;0,600;1,300&display=swap');
 
+html {
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: #f0f3f7;
   font-family: 'Barlow', sans-serif;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .App {
   text-align: center;
+  max-width: 95vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-logo {
